
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct bge_softc {int dummy; } ;


 int BGE_RXLP_LOCSTAT_DMA_HPWRQ_FULL ;
 int BGE_RXLP_LOCSTAT_DMA_WRQ_FULL ;
 int BGE_RXLP_LOCSTAT_FILTDROP ;
 int BGE_RXLP_LOCSTAT_IFIN_DROPS ;
 int BGE_RXLP_LOCSTAT_IFIN_ERRORS ;
 int BGE_RXLP_LOCSTAT_OUT_OF_BDS ;
 int BGE_RXLP_LOCSTAT_RXTHRESH_HIT ;
 int BGE_RX_MAC_STATS_ALGIN_ERRORS ;
 int BGE_RX_MAC_STATS_BCAST ;
 int BGE_RX_MAC_STATS_CTRL_RCVD ;
 int BGE_RX_MAC_STATS_FCS_ERRORS ;
 int BGE_RX_MAC_STATS_FRAGMENTS ;
 int BGE_RX_MAC_STATS_FRAME_TOO_LONG ;
 int BGE_RX_MAC_STATS_JABBERS ;
 int BGE_RX_MAC_STATS_MCAST ;
 int BGE_RX_MAC_STATS_OCTESTS ;
 int BGE_RX_MAC_STATS_UCAST ;
 int BGE_RX_MAC_STATS_UNDERSIZE ;
 int BGE_RX_MAC_STATS_XOFF_ENTERED ;
 int BGE_RX_MAC_STATS_XOFF_RCVD ;
 int BGE_RX_MAC_STATS_XON_RCVD ;
 int BGE_TX_MAC_STATS_BCAST ;
 int BGE_TX_MAC_STATS_COLLS ;
 int BGE_TX_MAC_STATS_DEFERRED ;
 int BGE_TX_MAC_STATS_ERRORS ;
 int BGE_TX_MAC_STATS_EXCESS_COLL ;
 int BGE_TX_MAC_STATS_LATE_COLL ;
 int BGE_TX_MAC_STATS_MCAST ;
 int BGE_TX_MAC_STATS_MULTI_COLL ;
 int BGE_TX_MAC_STATS_OCTETS ;
 int BGE_TX_MAC_STATS_SINGLE_COLL ;
 int BGE_TX_MAC_STATS_UCAST ;
 int BGE_TX_MAC_STATS_XOFF_SENT ;
 int BGE_TX_MAC_STATS_XON_SENT ;
 int CSR_READ_4 (struct bge_softc*,int ) ;

__attribute__((used)) static void
bge_stats_clear_regs(struct bge_softc *sc)
{

 CSR_READ_4(sc, BGE_TX_MAC_STATS_OCTETS);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_COLLS);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_XON_SENT);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_XOFF_SENT);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_ERRORS);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_SINGLE_COLL);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_MULTI_COLL);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_DEFERRED);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_EXCESS_COLL);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_LATE_COLL);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_UCAST);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_MCAST);
 CSR_READ_4(sc, BGE_TX_MAC_STATS_BCAST);

 CSR_READ_4(sc, BGE_RX_MAC_STATS_OCTESTS);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_FRAGMENTS);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_UCAST);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_MCAST);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_BCAST);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_FCS_ERRORS);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_ALGIN_ERRORS);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_XON_RCVD);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_XOFF_RCVD);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_CTRL_RCVD);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_XOFF_ENTERED);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_FRAME_TOO_LONG);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_JABBERS);
 CSR_READ_4(sc, BGE_RX_MAC_STATS_UNDERSIZE);

 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_FILTDROP);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_DMA_WRQ_FULL);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_DMA_HPWRQ_FULL);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_OUT_OF_BDS);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_IFIN_DROPS);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_IFIN_ERRORS);
 CSR_READ_4(sc, BGE_RXLP_LOCSTAT_RXTHRESH_HIT);
}
